unpackaged/main/default/objects/Approval_Flow__c/Approval_Flow__c.object-meta.xml
<CustomObject>
    <description>Describes Approval Processes</description>
    <label>Approval Flow</label>
    <nameField>
        <label>Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>