unpackaged/main/default/objects/Approval_Flow__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the scenarios applicable to an Approval Flow</description>
    <inlineHelpText>Describes the scenarios applicable to an Approval Flow</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>