unpackaged/main/default/objects/Approval_Flow__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>For lookup on Quote to match Effective Flow</description>
    <inlineHelpText>For lookup on Quote to match Effective Flow</inlineHelpText>
    <label>Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>