unpackaged/main/default/objects/Approval_Flow__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>Outlines the related record type for lookup</description>
    <inlineHelpText>Outlines the related record type for lookup</inlineHelpText>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Quote Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>