unpackaged/main/default/objects/Approval_Flow__c/fields/Required_Approver__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver__c</fullName>
    <description>Final required approval level for this flow</description>
    <inlineHelpText>Final required approval level for this flow</inlineHelpText>
    <label>Required Approver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>