unpackaged/main/default/objects/Approval_Flow__c/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Required_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>